--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
 
 
         <ImageView
-            android:layout_width="70dp"
+            android:layout_width="70d"
             android:layout_height="70dp"
             android:src="@drawable/fingerprint"
             android:id="@+id/icon"
